--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -116,6 +116,10 @@
   z-index: 4;
 }
 
+.margin_c {
+  margin-top: 150px;
+}
+
 @keyframes pop-up {
   0% {
     opacity: 0;
@@ -145,8 +149,5 @@
   .content {
     width: 100%;
     height: 500px;
-  }
-  .margin {
-    margin-top: 150px;
   }
 }/*# sourceMappingURL=o_nas.css.map */
