--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -121,6 +121,9 @@ $text_hover_dark: #f36259;
     opacity: 1;
     z-index: 4;
 }
+.margin_c {
+    margin-top: 150px;
+}
 @keyframes pop-up {
     0% {
         opacity: 0;
@@ -151,12 +154,6 @@ $text_hover_dark: #f36259;
         width: 100%;
         height: 500px;
     }
-    .margin {
-        margin-top: 150px;
-    }
-}
-@media only screen and (min-width: 600px) and (max-width: 768px) {
-
 }
 @media only screen and (min-width: 768px) {
 
