--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -3,9 +3,26 @@
 }
 .dark-mode .content {
   background-color: #f36259;
+  border: 3px solid #f7fafc;
 }
 .dark-mode .span {
   background-color: #283141;
+}
+
+.blur {
+  width: 0;
+  height: 0;
+  position: fixed;
+  opacity: 0;
+  z-index: -1;
+}
+
+.blur-active {
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(3px);
+  z-index: 2;
+  opacity: 1;
 }
 
 .container {
@@ -67,6 +84,7 @@
   width: 660px;
   height: 660px;
   border-radius: 30px;
+  border: 3px solid #2d3748;
   background-color: #2b6cb0;
   position: absolute;
   opacity: 0;
