--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -16,10 +16,25 @@ $text_hover_dark: #f36259;
     }
     .content {
         background-color: $text_hover_dark;
+        border: 3px solid $text_primary_dark;
     }
     .span {
         background-color: $dark_second;
     }
+}
+.blur {
+    width: 0;
+    height: 0;
+    position: fixed;
+    opacity: 0;
+    z-index: -1;
+}
+.blur-active {
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(3px);
+    z-index: 2;
+    opacity: 1;
 }
 .container {
     display: flex;
@@ -76,6 +91,7 @@ $text_hover_dark: #f36259;
     width: 660px;
     height: 660px;
     border-radius: 30px;
+    border: 3px solid $text_primary_light;
     background-color: $text_hover_light;
     position: absolute;
     opacity: 0;
