--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -10,16 +10,14 @@
 }
 
 .blur {
-  width: 0;
-  height: 0;
+  width: 100%;
+  height: 100%;
   position: fixed;
   opacity: 0;
   z-index: -1;
 }
 
 .blur-active {
-  width: 100%;
-  height: 100%;
   backdrop-filter: blur(3px);
   z-index: 2;
   opacity: 1;
@@ -119,13 +117,13 @@
   margin-top: 5px;
   transform: rotate(45deg);
   transform-origin: 0% 0%;
-  margin-left: 10px;
+  margin-left: 8px;
 }
 .span:nth-child(2) {
   margin-top: 32px;
   transform: rotate(-45deg);
   transform-origin: 0% 100%;
-  margin-left: 10px;
+  margin-left: 8px;
 }
 
 .show-content {
@@ -167,5 +165,11 @@
   .content {
     width: 100%;
     height: 500px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .close:active {
+    transform: rotate(90deg);
+    transition: 0.3s;
   }
 }/*# sourceMappingURL=o_nas.css.map */
