--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -23,15 +23,13 @@ $text_hover_dark: #f36259;
     }
 }
 .blur {
-    width: 0;
-    height: 0;
+    width: 100%;
+    height: 100%;
     position: fixed;
     opacity: 0;
     z-index: -1;
 }
 .blur-active {
-    width: 100%;
-    height: 100%;
     backdrop-filter: blur(3px);
     z-index: 2;
     opacity: 1;
@@ -123,13 +121,13 @@ $text_hover_dark: #f36259;
         margin-top: 5px;
         transform: rotate(45deg);
         transform-origin: 0% 0%;
-        margin-left: 10px;
+        margin-left: 8px;
     }
     &:nth-child(2) {
         margin-top: 32px;
         transform: rotate(-45deg);
         transform-origin: 0% 100%;
-        margin-left: 10px;
+        margin-left: 8px;
     }
 }
 .show-content {
@@ -172,8 +170,10 @@ $text_hover_dark: #f36259;
     }
 }
 @media only screen and (min-width: 768px) {
-
-}
-@media only screen and (min-width: 992px) {
-
+    .close {
+        &:active {
+            transform: rotate(90deg);
+            transition: 0.3s;
+        }
+    }
 }
