--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -14,13 +14,18 @@
   height: 100%;
   position: fixed;
   opacity: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .blur-active {
   backdrop-filter: blur(3px);
   z-index: 2;
   opacity: 1;
+}
+
+.hide {
+  opacity: 0.5;
+  transition: all 0.2s;
 }
 
 .container {
@@ -47,7 +52,6 @@
   background-color: #2b6cb0;
   z-index: 1;
   animation: pop-up 1.5s ease;
-  opacity: 1;
 }
 .block:nth-child(1) {
   grid-area: 1/1/3/2;
@@ -64,9 +68,9 @@
 .block:nth-child(5) {
   grid-area: 2/2/3/3;
 }
-.block img {
-  width: 100%;
-  filter: drop-shadow(0 0 10px #ffffff);
+.block:nth-child(5) img {
+  width: auto;
+  height: 100%;
 }
 
 .content_cards {
@@ -91,6 +95,12 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+}
+.content:nth-child(5) img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  width: auto;
 }
 
 .close {
@@ -159,13 +169,22 @@
   }
   .block {
     height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .content_cards {
     width: 80%;
   }
   .content {
     width: 100%;
-    height: 500px;
+    height: auto;
+  }
+  .content:nth-child(5) img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
   }
 }
 @media only screen and (min-width: 768px) {
