--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -27,12 +27,16 @@ $text_hover_dark: #f36259;
     height: 100%;
     position: fixed;
     opacity: 0;
-    z-index: -1;
+    z-index: 1;
 }
 .blur-active {
     backdrop-filter: blur(3px);
     z-index: 2;
     opacity: 1;
+}
+.hide {
+    opacity: 0.5;
+    transition: all 0.2s;
 }
 .container {
     display: flex;
@@ -56,7 +60,6 @@ $text_hover_dark: #f36259;
     background-color: $text_hover_light;
     z-index: 1;
     animation: pop-up 1.5s ease;
-    opacity: 1;
     &:nth-child(1) {
         grid-area: 1/1/3/2;
     }
@@ -71,10 +74,10 @@ $text_hover_dark: #f36259;
     }
     &:nth-child(5) {
         grid-area: 2/2/3/3;
-    }
-    img {
-        width: 100%;
-        filter: drop-shadow(0 0 10px $white_l);
+        img {
+            width: auto;
+            height: 100%;
+        }
     }
 }
 .content_cards {
@@ -98,6 +101,14 @@ $text_hover_dark: #f36259;
     padding: 20px;
     display: flex;
     flex-direction: column;
+    &:nth-child(5) {
+        img {
+            max-width: 100%;
+            max-height: 100%;
+            height: auto;
+            width: auto;
+        }
+    }
 }
 .close {
     display: flex;
@@ -161,13 +172,24 @@ $text_hover_dark: #f36259;
     }
     .block {
         height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .content_cards {
         width: 80%;
     }
     .content {
         width: 100%;
-        height: 500px;
+        height: auto;
+        &:nth-child(5) {
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                height: auto;
+                width: auto;
+            }
+        }
     }
 }
 @media only screen and (min-width: 768px) {
