--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -119,6 +119,10 @@
   padding: 10px;
   font-size: 20px;
 }
+.content:nth-child(3) p {
+  padding: 10px;
+  font-size: 20px;
+}
 .content:nth-child(5) img {
   max-width: 100%;
   max-height: 100%;
@@ -200,7 +204,7 @@
     height: auto;
   }
   .content:nth-child(2) p {
-    font-size: 15px;
+    font-size: 18px;
   }
   .content:nth-child(5) img {
     max-width: 100%;
