--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -126,6 +126,12 @@ $text_hover_dark: #f36259;
             font-size: 20px;
         }
     }
+    &:nth-child(3) {
+        p {
+            padding: 10px;
+            font-size: 20px;
+        }
+    }
     &:nth-child(5) {
         img {
             max-width: 100%;
@@ -206,7 +212,7 @@ $text_hover_dark: #f36259;
         height: auto;
         &:nth-child(2) {
             p {
-                font-size: 15px;
+                font-size: 18px;
             }
         }
         &:nth-child(5) {
