--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -109,7 +109,7 @@
   position: absolute;
   opacity: 0;
   transition: 0.5s;
-  padding: 20px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
 }
@@ -200,18 +200,19 @@
   .content {
     width: 100%;
     height: auto;
-  }
-  .content:nth-child(2) p {
-    font-size: 3.7vw;
-  }
-  .content:nth-child(3) p {
-    font-size: 15px;
+    max-height: 100vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
   }
   .content:nth-child(5) img {
     max-width: 100%;
     max-height: 100%;
     height: auto;
     width: auto;
+  }
+  .content .close {
+    scale: 0.6;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
@@ -231,17 +232,15 @@
   .content {
     width: 100%;
     height: auto;
-  }
-  .content:nth-child(2) p {
-    font-size: 3.7vw;
-  }
-  .content:nth-child(3) p {
-    font-size: 15px;
+    font-size: 13px;
   }
   .content:nth-child(5) img {
     max-width: 100%;
     max-height: 100%;
     height: auto;
     width: auto;
+  }
+  .content .close {
+    scale: 0.8;
   }
 }/*# sourceMappingURL=o_nas.css.map */
