--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -236,7 +236,9 @@
   .content {
     width: 100%;
     height: auto;
-    font-size: 13px;
+    max-height: 100vh;
+    overflow: scroll;
+    overflow-x: hidden;
   }
   .content:nth-child(5) img {
     max-width: 100%;
@@ -246,5 +248,8 @@
   }
   .content .close {
     scale: 0.8;
+  }
+  .content::-webkit-scrollbar {
+    width: 0.5em;
   }
 }/*# sourceMappingURL=o_nas.css.map */
