--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@ html {
 }
 body {
     background-color: $white_l;
+    overflow: scroll;
     overflow-x: hidden;
     transition: 0.2s;
     display: flex;
