--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -144,6 +144,13 @@
   cursor: pointer;
 }
 
+.contact {
+  width: 100%;
+  margin-top: 20px;
+  height: 120px;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
 .span {
   display: block;
   position: absolute;
