--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -151,7 +151,13 @@ $text_hover_dark: #f36259;
     &:hover {
         cursor: pointer;
     }
-}    
+} 
+.contact {
+    width: 100%;
+    margin-top: 20px;
+    height: 120px;
+    background-color: rgba(0, 0, 0, 0.377);
+}  
 .span {
     display: block;
     position: absolute;
