--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -149,6 +149,22 @@
   margin-top: 20px;
   height: 120px;
   background-color: rgba(0, 0, 0, 0.377);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  width: 110px;
+  height: 110px;
+  background-color: aqua;
+  border-radius: 50%;
+}
+
+.contactLink {
+  width: 300px;
+  height: 110px;
+  background-color: #f36259;
 }
 
 .span {
