--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -157,7 +157,21 @@ $text_hover_dark: #f36259;
     margin-top: 20px;
     height: 120px;
     background-color: rgba(0, 0, 0, 0.377);
-}  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon {
+    width: 110px;
+    height: 110px;
+    background-color: aqua;
+    border-radius: 50%;
+}
+.contactLink {
+    width: 300px;
+    height: 110px;
+    background-color: #f36259;
+}
 .span {
     display: block;
     position: absolute;
